# cv-intel-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  sync-to-hf.yml
docs/: COLAB_GUIDE_TH.md  DEPLOY_GUIDE_TH.md  GUIDE_TH.md
notebooks/: 01_ingest_and_index.ipynb  02_demo_visualization.ipynb
scripts/: build_notebooks.py  init_db.py  rebuild_index.py  run_ingestion.py
src/: main.py
src/agent/: rag_agent.py
src/config/: domain.py  settings.py
src/connectors/: base.py  clinical_trials.py  openfda.py  pubmed.py  registry.py  rss.py
src/db/: models.py  repository.py  schema.sql  session.py
src/llm/: client.py  prompts.py
src/models/: record.py
src/rag/: chunker.py  embedder.py  indexer.py  retriever.py  vectorstore.py
src/static/: chat.html  dashboard.html
src/utils/: logger.py
tests/: conftest.py  test_chunker.py  test_connectors.py  test_rag_integration.py
